# mpt-editor

./: .gitignore  LICENSE  Makefile  README.md  UI_TEST_REPORT.md
.devcontainer/: devcontainer.json  setup.sh
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schema.py
backend/app/routes/: clips.py  files.py  projects.py  render.py  settings.py
backend/app/services/: events.py  pexels.py  pipeline.py  render_service.py  script.py  tts.py  youtube.py
backend/app/storage/: db.py
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AlternatesDrawer.tsx  ClipCard.tsx  ClipTrack.tsx  PreviewPlayer.tsx  ReplaceDrawer.tsx  ScriptTrack.tsx  Timeline.tsx
frontend/src/pages/: Editor.tsx  Generating.tsx  Home.tsx  Settings.tsx
frontend/src/types/: index.ts
scripts/: dev.sh
