[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mpt-editor-backend"
version = "0.1.0"
description = "Backend for mpt-editor: prompt -> pipeline -> editable timeline -> rendered video."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.19",
    "pydantic==2.12.5",
    "pydantic-settings==2.7.0",
    "loguru==0.7.3",
    "google-genai==2.6.0",
    "edge-tts==7.2.7",
    "yt-dlp==2026.3.17",
    "requests==2.33.1",
    "moviepy==2.1.2",
    "sse-starlette==2.1.3",
    "aiofiles==24.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = false
